# QT_CPP

./: README.md
.qtcreator/: project.json
6_Signals_Slots/: destination.h  source.h
Lesson1/: CMakeLists.txt  main.cpp
Lesson10_DogsOwner/: Lesson10_DogsOwner.pro  dog.cpp  main.cpp  owner.cpp  owner.h
Lesson10_Monitoring/: Lesson10_Monitoring.pro  main.cpp  monitor.cpp  monitor.h  test.cpp  test.h
Lesson2_Classes/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
Lesson2_Classes_/: CMakeLists.txt  animal.cpp  animal.h  main.cpp  mammal.cpp  mammal.h
Lesson3_memory_mangement/: main.cpp
Lesson4_Automatic_memory_management/: .gitignore  main.cpp  test.cpp  test.h
Lesson5_Parent_Child_deconstructor/: Lesson4_Parent_Child_deconstructor.pro  animal.cpp  main.cpp  test.cpp  test.h
Lesson6_Signals_Slots/: .gitignore  destination.cpp  main.cpp  source.cpp
Lesson7_Destructors/Lesson7_Disconnecting/: .gitignore  Lesson7_Disconnecting.pro  main.cpp  radio.cpp  radio.h  station.cpp  station.h
Lesson8_PropertyTest/: Lesson8_PropertyTest.pro  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
Lesson9_Timers/: CMakeLists.txt  main.cpp  test.cpp  test.h
